Test/typing/should_fail/overload.java
package tutu.titi.toto;

class A {
	public int method1() {
		return 1;
	}

	public int method1() {
		return 2;
	}
}
